more spacing fixes

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@400&display=swap');
+
 
 html {
   --color-text: black;
@@ -15,6 +16,7 @@ h1 {
   font-size: 4em;
   letter-spacing: .1em;
   margin: .3em 0 0 0;
+  display: block;
 }
 
 .app__wrapper {
@@ -36,9 +38,34 @@ h1 {
   
 }
 
+.home__titleSection {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .home__headerContent {
   background: var(--color-primary);
-  padding: 1em var(--side-page-padding);
+  padding: 1em var(--side-page-padding) 2em var(--side-page-padding);
   display: flex;
   justify-content: space-between;
+}
+
+.home__infoSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+}
+
+.home__careerInfo {
+  display: flex;
+  flex-direction: column;
+  margin: 2em 0;
+  /* align-items: flex-end; */
+}
+
+.home__careerDesc {
+  font-size: 14px;
 }
